--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
 
+<h1>Coolgames</h1>
+<a href="">
+<button id="games">Games</button>
+</a>
+
+<a href="">
+<button id="calculator">Calculators</button>
+</a>
+
+<a href="">
+<button id="credit">Credits</button>
+</a>
+
+<a href="">
+<button id="login">Owner access</button>
+</a>
+
+</body>
+</html>
