--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <button id="games">Games</button>
 </a>
 
-<a href="">
+<a href="epic-borg-5f01ce.netlify.app">
 <button id="calculator">Calculators</button>
 </a>
 
