--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1>Coolgames</h1>
-<a href="">
+<a href="xenodochial-morse-5e800b.netlify.app">
 <button id="games">Games</button>
 </a>
 
