--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+  <link rel="stylesheet" href="index.css">
 <body>
 
 <h1>Coolgames</h1>
