--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <h1>Coolgames</h1>
   
-  <a href="xenodochial-morse-5e800b.netlify.app">
+  <a href="xenodochial-morse-5e800">
     <button id="games">Games</button>
     </a>
 
-  <a href="epic-borg-5f01ce.netlify.app">
+  <a href="epic-borg-5f01ce">
     <button id="calculator">Calculators</button>
     </a>
 
